# Agent-Bench

./: CONTRIBUTING.md  README.md
benchmarks/memory/: AMB-001-benchmark.yaml  README.md
benchmarks/reference/: README.md  agent-as-a-judge.md  agent-kernel-mas.md  agentboard.md  akg-kernel-agent.md  aws-bedrock-agentcore-evaluations.md  clear-enterprise-evaluation.md  efficient-benchmarking-ai-agents.md  mlflow-agent-evaluation.md  petri-net-agent-performance.md  structural-mas-performance.md
contracts/: benchmark-contract.md
docs/: confidence-model.md  entity-attribute-evaluation.md  outcomes-and-leaderboards.md
platform/: Cargo.toml  Dockerfile  README.md
platform/deploy/: README.md  platform.yaml  publish-page-job.yaml  surrealdb.yaml
platform/docs/: DESIGN.md  cncf-stack.md  data-architecture.md  declarative-stack.md  ecosystem.md  governance.md  operating-entities.md  reconciliation.md  security-owasp.md  semantic-contract.md  surrealdb-security.md  telemetry.md  zero-trust.md
platform/examples/: publish_page.rs
platform/migrations/: 0001_init.surql  0002_multi_hardware.surql  0002_security.surql.template
platform/schema/: memory_attribute.surql  metamodel.surql  metrics.surql  pages.surql  search_graph.surql  trajectory_attribute.surql
platform/schema/context/: evaluation.jsonld
platform/schema/pages/: agent-bench-logic-reference.md  publish.sh
platform/src/: api.rs  card.rs  db.rs  domain.rs  error.rs  evaluation.rs  judge.rs  lib.rs  main.rs  ml.rs  scoring.rs  tenancy.rs
platform/src/attributes/: memory.rs  mod.rs  trajectory.rs
platform/src/metrics/: clear.rs  mod.rs  perf.rs  progress.rs  ranking.rs
platform/tests/: end_to_end.rs  metamodel_ddl.rs  schema_ddl.rs
